src/styles/main.scss
@import 'flex';
@import 'bootstrap';

$bright-bkgd: #f0ce00;
$dark-bkgd: #101010;
$white-bkgd: transparent;
$white: white;
$off-white: #F5F5F5;
$light-gray: #CCCCCC;
$blue: #005C5D;

$div-circle-bkgd: $bright-bkgd;
$div-circle-border: $dark-bkgd;

$jobsBkgd: transparent;
$jobContainerBkgd: $white;
$jobContainerBoxShadow: $off-white;
$applyButtonBorder: $white;
$applyButtonBkgd: $bright-bkgd;
$applyButtonColor: white;

$projectsBkgd: $bright-bkgd;
$projectContainerBkgdOdd: $white;
$projectContainerColorOdd: $dark-bkgd;
$projectContainerBkgdEven: $dark-bkgd;
$projectContainerColorEven: $white;
$projectContainerBoxShadow: $off-white;

$traffic-red: red;
$traffic-orange: orange;
$traffic-blue: blue;
$traffic-red: #990515;
$traffic-orange: #DF7800;
$traffic-blue: #134D9C;
$date-tag-background: $light-gray;
$date-tag-color: $dark-bkgd;
$job-color: #666666;

$phoneTall: 544px; /* originally 575 */
$phoneWide: 767px;
$tablet: 1023px;
$desktop: 1024px;

body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  color: #333;
  background-color: $off-white;
  margin: 0;
  padding: 50px 0px 0px 0px;
  min-width: 235px;
}

section {
 padding: 20px;
}

.full-width {width: 100%;}
.text-center {text-align: center;}
.inline-block {display: inline-block;}

span.link, span[link] {color: $blue; cursor: pointer;}

.yellow-button {
  margin-top: 5px !important;
  margin-bottom: 5px !important;
  background-color: $bright-bkgd;
  color: $white;
}
.yellow-button:focus, .yellow-button:hover {
  background-color: $dark-bkgd;
  color: $bright-bkgd;
}

.modal-footer {
  padding: 8px 8px 8px 8px !important;
  border: 0px !important;
  button {margin-left: 5px; margin-right: 5px;}
}

div.separator-container {
  padding: 0px 10px 0px 10px;
  div.separator {
    border: 0.5px solid $off-white;
    background-color: $off-white;
    width: calc(100% - 122.5px);
  }
}

/*********TEXT*********/
h1,h2,h3,h4,h5,h6 {
  font-family: 'Righteous', cursive;
}

p {
  white-space: pre-line;
}

.navbar {
  p.navbar-right { margin-right: 15px; }
  @media (max-width: 544px) { p.navbar-right { display: none; } }
  @media (min-width: 544px) { div#uiLang { display: none; } }
  .navbar-brand {
    padding-top: 8px;
    padding-bottom: 8px;
    height: 50px;
    // display: block;
    img {
      display: block;
      height: 100%;
      width: auto;
      cursor: pointer;
    }
  }
}
.navbar-inverse {
  background-color: $dark-bkgd;
  border-color: $dark-bkgd;
  // -webkit-box-shadow: 0 0 10px 3px $dark-bkgd;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
  // -moz-box-shadow:    0 0 10px 3px $dark-bkgd;  /* Firefox 3.5 - 3.6 */
  // box-shadow:         0 0 10px 3px $dark-bkgd;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.search {
  font-size: 16px;
  font-weight: 300;
  padding: 0px 10px 20px 10px;
  .search-view-type {
    span.link {
      margin: auto 5px;
      display: inline-block;
      text-decoration: underline;
    }
    span.active { font-weight: 400; }
  }
}

.home {
  padding: 0px;
  .about-banner-container {
    background-color: $bright-bkgd;
    padding: 20px 5% 20px 5%;
    .about-banner {
      color: $dark-bkgd;
      max-width: 700px;
      width:100%;
      padding: 40px;
      h1,h2,h3,h4,h5,h6,p {color: $dark-bkgd;}
      p {
        font-size: 1.1em;
      }
    }
  }
  .about-choice-container {
    background-color: $white;
    padding: 20px 5% 20px 5%;
    @media screen and (max-width: $phoneTall) { padding: 20px 0px 10px 0px; }
    .about-choice {
      padding: 0px;
      h1,h2,h3,h4,h5,h6,p {color: black}
    }
  }
  .about-choice-container {
    .about-choice {
      .container {
        width:100%;
        padding:10px;
        .div-circle {
          background-color: $div-circle-bkgd;
          border-radius: 50%;
          cursor: pointer;
          -webkit-box-shadow: 0 0 10px 3px $dark-bkgd;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
          -moz-box-shadow:    0 0 10px 3px $dark-bkgd;  /* Firefox 3.5 - 3.6 */
          box-shadow:         0 0 10px 3px $dark-bkgd;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
          // border: 5px solid $dark-bkgd;
          margin-top:10px;
          margin-bottom:10px;
        }
        .div-circle-big {
          padding: 10px;
          width: 40vw; height: 40vw;
          max-width: 280px; max-height: 280px;
          min-width: 161px; min-height: 161px;
        }
        .div-circle-small {
          padding: 7px;
          width: 32vw; height: 32vw;
          max-width: 200px; max-height: 200px;
          min-width: 120px; min-height: 120px;
        }
      }
    }
  }
  .about-intro-container{
    background-color: $white;
    // background-color: $bright-bkgd;
    padding: 20px 5% 20px 5%;
    .about-intro {
      max-width: 900px;
      padding: 0px;
      h1,h2,h3,h4,h5,h6,p {color: black}
    }
  }
  .about-feature-container{
    background-color: $white-bkgd;
    // background-color: $bright-bkgd;
    padding: 20px 5% 20px 5%;
    .about-feature {
      max-width: 900px;
      padding: 0px;
      h1,h2,h3,h4,h5,h6,p {color: black}
      h4 {margin-bottom:0px!important;}
      .column {padding:10px;}
    }
  }
  .about-team-container {
    background-color: $dark-bkgd;
    padding: 10px 5% 10px 5%;
    font-weight: 300;
    .about-team {
      max-width: 700px;
      width:100%;
      padding: 15px;
      h2 {
        color: $bright-bkgd;
        margin-bottom:30px;
      }
      img {
        width: 100px;
        height: 100px;
      }
      h4,p {color: $white;}
      .title {
        color: #AAA;
        display: block;
      }
      .person-container {
        padding-top: 10px;
        padding-bottom: 10px;
      }
    }
  }
  .contact-container {
    background-color: $bright-bkgd;
    padding: 20px 5% 20px 5%;
    .contact {
      color: $dark-bkgd;
      max-width: 700px;
      width:100%;
      padding: 40px;
      h1,h2,h3,h4,h5,h6,p {color: $dark-bkgd;}
      .link {
        cursor: pointer;
        text-decoration: none;
      }
    }
  }
}

.social-button, .social-button:active, .social-button:visited {
  font-size: 22px;
  cursor: pointer;
  color: $dark-bkgd;    
}

.jobs {
  background-color: $jobsBkgd;
  padding: 50px 0px;
  padding: 0px;
  margin: 0px;
  // @media screen and (min-width: $phoneTall) { padding: 50px 0px; }
  text-align: left;

  #job-outter-outter-div {
    width: 100%;
  }

  .outter-div {
    max-width: 600px;
    width: 100%;
    background-color: white;
    border: 1.5px solid #EEE;
    box-shadow: 0px 0px 50px #D0D0D0;
    // padding: 10px;
    @media screen and (min-width: $phoneTall) { padding: 10px; }
    @media screen and (max-width: $phoneTall) { padding: 0px; }
  }

  .job-container {
    h1,h2,h3,h4,h5,h6 {
      font-family: 'Open Sans', sans-serif;
      font-weight: bold;
    }
    margin-top: 15px;
    margin-bottom: 15px;
    padding: 0px;
    border-radius: 5px;
    background-color: $jobContainerBkgd;
    color: $dark-bkgd;
    font-size: 14px;
    // -webkit-box-shadow: 0 0 5px 0px $jobContainerBoxShadow;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
    // -moz-box-shadow:    0 0 5px 0px $jobContainerBoxShadow;  /* Firefox 3.5 - 3.6 */
    // box-shadow:         0 0 5px 0px $jobContainerBoxShadow;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
    .job-thumbnail{
      width: 30%;
      max-width: 125px;
      margin: 0px 0px 0px 10px;
      padding: 0px;
      background-repeat: no-repeat;
      background-position: right top;
      background-size: contain;
      border-radius: 10px;
      border: 0px;
    }
    .job-thumbnail:before {
      content: "";
      display: block;
      padding-top: 100%;
    }

    .detail-container {
      position: relative;
      overflow-wrap: break-word;
      padding-left: 15px;
      padding-right: 7.5px;
      width: calc(70% - 10px);
      
      // .apply-button {
      //   // margin-top: calc(100% - 30px);
      //   position: absolute;
      //   bottom: 0;
      //   left: 15px;
      //   background-color: $applyButtonBkgd;
      //   border: 1px solid $applyButtonBorder;
      //   color: $applyButtonColor;
      // }
      p {
        margin-left: 1.5px;
        color: $job-color;
        font-weight: 300;
        i {font-size: 0.9em; margin-right: 8px; min-width: 5px;}
      }
    }

    .job-title {
      white-space: nowrap;
      overflow: hidden;
      font-size: 1.2em;
      font-weight: 600;
      text-overflow: ellipsis;
    }

    .tag {
      margin-top: 5px;
      margin-bottom: 5px;
      text-align: center;
      div {
        background-color: $date-tag-background;
        border-radius: 15px;
        color: $date-tag-color;
        margin: 0px 5px 0px 0px;
        padding: 0px 10px;
      }
      div.event {
        background-color: #666;
        color: $off-white;
      }
      div.lang {
        background-color: #AAA;
        color: $off-white;
      }
    }
    

  }
}

.apply-job-modal.modal-dialog {
  // background-color: $modalBkgd;
  margin: 30px auto;
  @media screen and (max-width: $phoneTall) { width: 95vw !important; }
  @media screen and (min-width: $phoneTall) { width: 90vw !important; max-width: 600px; }
  .modal-content>.modal-body {
    max-height: calc(100vh - 60px - 100px - 40px);
    overflow: scroll;
    h1,h2,h3,h4,h5,h6 {
      font-family: 'Open Sans', "sans-serif";
      font-weight: bold;
    }
    p.indented { margin-left: 10px !important; }
  }
  .modal-header {
    border-radius: 5px 5px 0px 0px;
    background-color: $bright-bkgd;
    color: $dark-bkgd;
    padding: 10px 15px;
    font-weight: bold;
    // p { height: 1.5em; overflow: hidden; text-overflow: ellipsis; }
  }
  .modal-footer {
    border-radius: 0px 0px 5px 5px;
    // background-color: $bright-bkgd;
    border-top: 0.5px solid #DDD !important;
    button {
      border: 0px !important;
      background-color: transparent;
    }
    a>button { background-color: $dark-bkgd; color: $off-white; }
  }
}

.traffic {
  border-radius: 50%;
  display: inline-block;
  width: 1em;
  height: 1em;
  margin: 0px 6px -1.1px 0px;
}
.traffic-blue {background-color: $traffic-blue;}
.traffic-orange {background-color: $traffic-orange;}
.traffic-red {background-color: $traffic-red;}

.job-search-bar {
  position: fixed;
  top: 51px;
  left: 0px;
  width: 100%;
  height: 25px;
  z-index: 7;
  color: $dark-bkgd;
  background-color: rgba(245,245,245,0.5);
  // border: 0.5px solid $bright-bkgd;
  .job-type-container {
    // display: inline-block;
    flex-wrap: nowrap;
    height: 100%;
    min-width: 330px;
    overflow: scroll;
  }
  .title {
    padding: 0px 10px;
    height: 100%;
    font-size: 12px;
    text-align: center;
  }
  .job-type {
    // background-color: $dark-bkgd;
    // background-color: $bright-bkgd;
    padding: 0px 10px;
    height: 100%;
    font-size: 14px;
    text-align: center;
    cursor: pointer;
    border-radius: 0px 0px 10px 10px
  }
  .active {
    background-color: $dark-bkgd;
    color: $off-white;
  }
}

.clearfix {clear: both;}

